# loci-copilot

./: .gitignore  .mcp.json  .mcp.json   CODEOWNERS  LICENSE  README.md  plugin.json  pyproject.toml  run_evals.sh  run_tests.sh  skills-lock.json
.claude-plugin/: marketplace.json  plugin.json
asm-analyze-wheels/: loci_service_asmslicer-1.0.0-cp312-cp312-macosx_26_0_arm64.whl  loci_service_asmslicer-1.0.0-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  loci_service_asmslicer-1.0.0-cp313-cp313-macosx_26_0_arm64.whl  loci_service_asmslicer-1.0.0-cp313-cp313-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  loci_service_asmslicer-1.0.0-cp314-cp314-macosx_26_0_arm64.whl  loci_service_asmslicer-1.0.0-cp314-cp314-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  loci_service_asmslicer-1.0.1-cp312-cp312-macosx_11_0_arm64.whl  loci_service_asmslicer-1.0.1-cp312-cp312-macosx_11_0_x86_64.whl  loci_service_asmslicer-1.0.1-cp312-cp312-macosx_26_0_arm64.whl  loci_service_asmslicer-1.0.1-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  loci_service_asmslicer-1.0.1-cp312-cp312-win_amd64.whl  loci_service_asmslicer-1.0.1-cp313-cp313-win_amd64.whl  loci_service_asmslicer-1.0.1-cp314-cp314-win_amd64.whl
evals/: strategy.md
hooks/: hooks.json  post_edit_nudge.py  post_edit_reminder.py  preflight_check.py  session-init.sh
lib/: asm_analyze.py  detect-project.sh  generate-summary.sh  loci_bridge.py  loci_stats.py  task_tracker.py
setup/: setup.sh
tests/: bootstrap_venv.py  (+1 more)
(+31 files in other folders)
